# venvi

./: .gitignore  .golangci.yml  404.html  Dockerfile  GUIDELINES.md  README.md  debug_drinbz.json  debug_noi.json  debug_unibz.html  docker-compose.yml  flake.nix  go.mod  go.sum  index.html  main.go  mkdocs.yml  objects.inv  pyproject.toml  run_logs.txt  run_logs_debug.txt  run_logs_final.txt  run_logs_final_2.txt  run_logs_final_3.txt  run_logs_final_4.txt  run_logs_final_5.txt  run_logs_final_6.txt  run_logs_final_7.txt  run_logs_final_8.txt  run_logs_new.txt  venvi-agent
.agent/: lessons_learned.md
.agent/rules/: autonomous-loop.md  autonomous_loop.md  coding_standards.md  pr_standard.md  tech_stack.md  verification.md
.agent/skills/create_endpoint/: SKILL.md
.agent/skills/playwright/: .temp-execution-1770405560761.js
.agent/skills/specrate/: README.md
.agent/workflows/: manage_dependencies.md  run_autonomous_loop.md  verify_changes.md
.github/workflows/: ci.yml  docs.yml
agent/: main.go
agent/cmd/: commit.go  log.go  memory.go  prompt.go  root.go
agent/internal/git/: git.go
agent/internal/log/: log.go
agent/internal/memory/: memory.go
agent/internal/prompts/: templates.go
api_reference/: index.html
docs/: api_reference.md  guidelines.md  index.md
guidelines/: index.html
migrations/: 1770466097_updated_users.go
pb_migrations/: 1707166800_create_events.js  1738850000_update_schema.js
pb_public/css/: style.css
providers/: drinbz.go  drinbz_test.go  euro_hackathons.go  helpers.go  museion.go  museion_test.go  noi.go  noi_test.go  odh.go  provider.go  providers_test.go  sync.go  unibz.go  unibz_test.go
providers/fixtures/: drinbz.json  museion.html  noi.json  unibz.html
recommendations/: service.go  service_test.go
routes/: api.go  helpers.go  web.go  web_test.go
scripts/: add_taken_column.py  check_odh_data.py  init_db.sh  setup_wsl.sh  test_taken_api.py  validate.py  validate.sh
search/: search_index.json
src/tests/: conftest.py  test_api.py  test_coverage.py  test_db.py  test_events_integration.py  test_infrastructure.py  test_ingestion.py  test_main.py  test_odh.py  test_web.py
src/venvi/: main.py
src/venvi/core/: db.py
src/venvi/models/: event.py  hackathon.py  odh_event.py
tests/: integration_test.go
tests/e2e/: login_behavior.spec.js
views/: design1.html  design10.html  design11.html  design12.html  design13.html  design14.html  design15.html  design16.html  design17.html  design18.html  design19.html  design2.html  design20.html  design21.html  design22.html  design23.html  design3.html  design4.html  design5.html  design6.html  design7.html  design8.html  design9.html  index.html  layout.html
views/partials/: event_list.html
(+22 files in other folders)
