[tool.poetry]
name = "venvi"
version = "0.1.0"
description = "EU Hackathon Aggregator and Suggestion Platform."
authors = ["Venvi Team"]
readme = "README.md"
packages = [{include = "venvi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
asyncpg = "^0.30.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
mkdocs-material = "^9.5.0"
pytest-asyncio = "^0.23.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["B008"]  # Function calls in defaults (needed for FastAPI Depends)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = ["src"]
